@@ -1,3 +1,11 @@
+2021-08-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* Avoid MSVC compiler errors (adapted from W32TeX patch).
+	- otp-parser.c(118) : error C2365: 'INPUT' :
+	  redefinition; previous definition was 'Typedef'
+	- otp-parser.c(118) : error C2086: 'yytokentype INPUT' :
+	  redefinition
+
 2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Better dependencies for 'make check'.
